# UO_Classwork

./: README.md
313/: OwenMcEvoy_lab0.py  OwenMcEvoy_lab1.py  inSample-1.txt
313/OwenMcEvoy_Lab2/: BST.py  Node.py  README  inSample.txt  lab2.py
313/OwenMcEvoy_Lab3/: OwenMcEvoy_MaxHeap.py  OwenMcEvoy_lab3.py  OwenMcEvoy_pQueue.py  inSample3.txt
313/OwenMcEvoy_Lab4/: Node.py  RBT.py  lab4.py  test.txt  test2.txt
315/HW/: 315assignment2.py  addMultNum.py
315/HW/hw6/: hw6-iter.py  hw6-rec.py  inSample1.txt  inSample2.txt
OS-Classwork/: README.md
OS-Classwork/labs/: lab6.c  lab9-skeleton.c
Programming-Languages/: README.md
Programming-Languages/hw1/: hw1.sml  hw1_test.sml
Programming-Languages/hw2/: hw2.sml  hw2challenge.sml  hw2tests.sml
Programming-Languages/hw3/: hw3.sml  hw3tests.sml
Programming-Languages/hw4/: interp.sml  parser.sml  tests.sml
Programming-Languages/hw5/: type.sml  typechecker.sml
Programming-Languages/hw6/: hw6.rkt
Programming-Languages/hw7/: dynamic_scope_cbn.sml  streams.hs  streams.sml  tests.sml
Programming-Languages/hw8/: hw8.pl  interp.sml  merge.hs
Sci-Vis/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  flat.session  global.session  globalScript.py  originScript.py  proj2.cxx  proj3.cxx  proj4.cxx  proj5.cxx  proj6.cxx  proj7.cxx
Sci-Vis/differencer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer.cxx
Sci-Vis/differencer/differencer.app/Contents/MacOS/: differencer
dataVis/: README.md  clean.py  cleandata.csv  plot.py  rawcountries.csv
(+135 files in other folders)
